<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"


    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">







    <TextView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="35dp"
        android:text="@string/reserve"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textColor="@color/red"
        android:textIsSelectable="true"
        android:textSize="50sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/unosIme"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_vertical"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/unosPassword"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_vertical"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:autofillHints="" />

    <Button
        android:id="@+id/button"

        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_vertical"
        android:layout_marginTop="40dp"
        android:backgroundTint="#131313"
        android:hapticFeedbackEnabled="false"
        android:rotationX="0"
        android:text="@string/login"
        android:visibility="visible" />

    <TextView
        android:id="@+id/txtForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="0dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:clickable="true"
        android:text="@string/forgot_password"
        android:textSize="20sp"
        android:focusable="true" />

    <TextView
        android:id="@+id/signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/new_user_sign_up"
        android:textSize="22sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/About"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:clickable="true"
            android:contentDescription="@string/todo"
            android:focusable="true"
            app:srcCompat="@drawable/ic_baseline_info_24"
            app:tint="@color/black" />

    </LinearLayout>

        </LinearLayout>


    </ScrollView>

</LinearLayout>