<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/yellow"
    android:layout_height="match_parent"
    tools:context=".registration">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/ivProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                app:srcCompat="@drawable/ic_launcher_background" />

            <EditText
                android:id="@+id/newUsername"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:textColorHint="#1E1C1C"
                tools:layout_editor_absoluteX="113dp"
                tools:layout_editor_absoluteY="54dp" />

    <EditText
        android:id="@+id/newLastname"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPersonName"
        android:textColorHint="#1E1C1C" />

    <EditText
        android:id="@+id/newEmail"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_e_mail"
        android:inputType="textEmailAddress"
        android:textColorHint="#1E1C1C" />

    <EditText
        android:id="@+id/newPhonenumber"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_your_number"
        android:inputType="phone"
        android:textColorHint="#1E1C1C" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:backgroundTint="#EA0909"
        android:text="@string/register" />

    <TextView
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_vertical"
        android:layout_marginTop="15dp"
        android:text="@string/already_signed_in_login"
        android:textAlignment="center"
        android:textColorHint="#1E1C1C"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_baseline_sports_handball_24"
            android:contentDescription="@string/todo" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_baseline_check_circle_outline_24"
            android:contentDescription="@string/todo" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_baseline_restaurant_menu_24"
            android:contentDescription="@string/todo" />
    </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>